--- a/projeto2/index.html
+++ b/projeto2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social media links</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/projeto2/assets/images/favicon-32x32.png" type="image/png">
 </head>
 
 <body>
