ajuste para melhorar seo

--- a/projeto5/index.html
+++ b/projeto5/index.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
-    <div>
-        <img src="images/image-qr-code.png" alt="Imagem de um Qrcode">
-        <h1>
-            Improve your front-end skills by building projects
-        </h1>
-
-        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    <main>
+        <div>
+            <img src="images/image-qr-code.png" alt="Imagem de um Qrcode">
+            <h1>
+                Improve your front-end skills by building projects
+            </h1>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+    </main>
 </body>
 
 </html>
