desing mobile seimi finalizado, faltando alguns ajustes botões finais

--- a/projeto8/index.html
+++ b/projeto8/index.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-
+    <main>
+        <img src="images/illustration-hero.svg" alt="image of people listen music">
+        <h1>Order Summary</h1>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+        <div class="container">
+            <img src="images/icon-music.svg" alt="icon music">
+            <div class="plan-order">
+                <p id="plan"><strong>Annual Plan</strong></p>
+                <p>$59.99/year</p>
+            </div>
+            <div>
+                <a href="#">Change</a>
+            </div>
+        </div>
+        <a href="#">Proceed to payment</a>
+        <a href="#">Cancel Order</a>
+    </main>
 </body>
 
 </html>
