--- a/projeto8/index.html
+++ b/projeto8/index.html
@@ -24,8 +24,8 @@
                 <a href="#">Change</a>
             </div>
         </div>
-        <a href="#">Proceed to payment</a>
-        <a href="#">Cancel Order</a>
+        <a href="#" class="payment destaque">Proceed to payment</a>
+        <a href="#" class="payment">Cancel Order</a>
     </main>
 </body>
 
