--- a/projeto9/index.html
+++ b/projeto9/index.html
@@ -10,7 +10,40 @@
 </head>
 
 <body>
-
+    <main>
+        <div class="container">
+            <div class="img">
+                <picture>
+                    <source srcset="images/image-header-desktop.jpg" media="(min-width: 481px)">
+                    <img src="images/image-header-mobile.jpg" alt="three woman sit at the working table"
+                        class="img-colorida">
+                </picture>
+            </div>
+            <div class="conteudo">
+                <h1>
+                    Get <span>insights</span> that help your business grow.
+                </h1>
+                <p>
+                    Discover the benefits of data analytics and make better decisions regarding revenue, customer
+                    experience,
+                    and overall efficiency.</p>
+                <div class="container-status">
+                    <div class="status">
+                        <h2>10k +</h2>
+                        <p>companies</p>
+                    </div>
+                    <div class="status">
+                        <h2>314</h2>
+                        <p>Template</p>
+                    </div>
+                    <div class="status">
+                        <h2>12M+</h2>
+                        <p>Queries</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
